// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Console interface testing error(input) 1`] = `
<Pre
  className="uu5-bricks-console"
  controlled={true}
  disabled={false}
  hidden={false}
  id="uuID-console-inner"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  pureRender={false}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Console interface testing error(input) 2`] = `
<Pre
  className="uu5-bricks-console"
  controlled={true}
  disabled={false}
  hidden={false}
  id="uuID-console-inner"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  pureRender={false}
  selected={false}
  style={null}
  tooltip={null}
>
  <Div
    key="0"
  >
    <Text
      className="uu5-bricks-console-with-arrow"
      colorSchema="danger"
      content="\\"Log Error\\""
    />
  </Div>
</Pre>
`;

exports[`UU5.Bricks.Console interface testing info(input) 1`] = `
<Pre
  className="uu5-bricks-console"
  controlled={true}
  disabled={false}
  hidden={false}
  id="uuID-console-inner"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  pureRender={false}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Console interface testing info(input) 2`] = `
<Pre
  className="uu5-bricks-console"
  controlled={true}
  disabled={false}
  hidden={false}
  id="uuID-console-inner"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  pureRender={false}
  selected={false}
  style={null}
  tooltip={null}
>
  <Div
    key="0"
  >
    <Text
      className="uu5-bricks-console-with-arrow"
      colorSchema="info"
      content="\\"Log Info\\""
    />
  </Div>
</Pre>
`;

exports[`UU5.Bricks.Console interface testing warning(input) 1`] = `
<Pre
  className="uu5-bricks-console"
  controlled={true}
  disabled={false}
  hidden={false}
  id="uuID-console-inner"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  pureRender={false}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Console interface testing warning(input) 2`] = `
<Pre
  className="uu5-bricks-console"
  controlled={true}
  disabled={false}
  hidden={false}
  id="uuID-console-inner"
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  pureRender={false}
  selected={false}
  style={null}
  tooltip={null}
>
  <Div
    key="0"
  >
    <Text
      className="uu5-bricks-console-with-arrow"
      colorSchema="warning"
      content="\\"Log Warning\\""
    />
  </Div>
</Pre>
`;
